# chat

./: .env  Cargo.toml  _typos.toml  cliff.toml  deny.toml  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  request_id.rs  server_time.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yml  chat.yml  test.rest
chat_server/fixtures/: decoding.pem  encoding.pem  test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml  notify.yml
chat_test/tests/: chat.rs
migrations/: 20240611140256_initial.sql  20240614070258_workspace.sql  20240617053224_rename_images_to_files.sql  20240620031958_triggers.sql  20240620115954_triggers_two.sql  20240624040254_add_deleted_at_in_chats.sql  20240624071633_type_deleted_at.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  notif.rs  see.rs
src/: config.rs  lib.rs  main.rs
