[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
chat_core = { workspace = true }
hex = "0.4.3"
http-body-util = { version = "0.1.1", optional = true }
jwt-simple = { workspace = true }
mime_guess = "2.0.4"
serde = { workspace = true }
serde_json = "1.0.117"
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true }
sqlx-db-tester = { version = "0.4.2", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.11", features = ["io"] }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
utoipa-redoc = { version = "4", features = ["axum"] }
utoipa-rapidoc = { version = "4", features = ["axum"] }

[dev-dependencies]
chat_server = { workspace = true, features = ["test-util"] }
