[package]
name = "notify_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chat_core = { workspace = true }
dashmap = "5.5.3"
futures = "0.3.30"
jwt-simple = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.117"
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
